# CSE4059-final-project

./: .clangd  .gitignore  CMakeLists.txt  README.md  TODO.md  project_proposal.tex
.cache/clangd/index/: ray_tracer.cu.558FC15612AD6140.idx
assets/spectra/: XYZtoRGB_D65.csv  lerp_spectra.py  light_emission.csv  light_emission_1nm.csv  surface_reflectances.csv  surface_reflectances_1nm.csv
debug/: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  crt
include/: aabb.cuh  aabb_old.cuh  camera.h  crt.cuh  crt2.cuh  cuda_helper.h  image_writer.h  light_sampling.cuh  material.cuh  ray.cuh  ray_color.cuh  reduction.cuh  reduction_old.cuh  scene_manager.cuh  triangle3.cuh  triangle_mesh.cuh  vec3.cuh
include/util/: cb_light_spectrum.h  cb_spectrum.h  cie_spectrum.h  cuda_math.h  spectrum.cuh  srgb_spectrum.h
release/: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
src/: Model.cu  Model.cuh  ObjReader.cu  ObjReader.cuh  aabb.cu  cornell_box.cu  crt.cuh  light_sampling.cu  obj_reader.cuh  ray.cuh  ray_tracer.cu  reduction.cu  reduction_old.cu  scene_manager.cu  timer.h  triangle3.cuh  triangle_mesh.cu  vec3.cuh
src/math/: CMakeLists.txt  VecN.cu  VecN.cuh  vec3.cu  vec3.cuh
tests/: CMakeLists.txt  aabb_raii_test.cu  aabb_render_test.cu  camera_test.cu  cornell_box_spectral_test.cu  cornell_box_test.cu  light_sampling_test.cu  mesh_reduction_test.cu  mesh_vec_test.cu  obj_reduction_test.cu  reduction_benchmark.cu  reduction_test.cu  scene_manager_test.cu  triangle3_crt_test.cu
tests/include/: crt2.cuh  first_crt.cuh
writeups/: README.md  TODO.md  custom_package.sty  project_checkpoint.tex  project_plan.tex  project_proposal.tex
writeups/final_writeup/: custom.sty  main.tex  references.bib
writeups/final_writeup/chapters/: 1_intro.tex  2_problem_statement.tex  3_approach.tex  4_implementation.tex  5_performance_measurements.tex  6_optimizations_applied.tex  7_results.tex  8_discussion.tex  9_conclusion.tex  abstract0.tex  intro1.tex
writeups/final_writeup/images/: crt_render.py
writeups/profiler/: measurements.md  notes.md  report2.nsys-rep
writeups/profiler_stuff/: ncu_out.ncu-rep
writeups/proposal/: project_proposal.tex
